# desire-hiresign

./: .gitignore  CHANGELOG.md  COMPLETION_ANALYSIS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DELIVERABLE_STATUS.md  DESIGN_SYSTEM.md  FILE_UPLOAD_COMPLETE.md  FINAL_STATUS.md  FRONTEND_SPRINTS.md  PROJECT_COMPLETE.md  README.md  SPRINT0_SUMMARY.md  SPRINT0_UI_SUMMARY.md  SPRINT1_COMPLETE.md  SPRINT1_FINAL_STATUS.md  SPRINT1_PROGRESS.md  SPRINT1_TESTING_NOTES.md  SPRINT2_STATUS.md  SPRINT_STATUS.md  TESTING_GUIDE.md  test_sprint1.sh
api/: README.md  alembic.ini  env.example  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_users_table.py  002_add_profiles_table.py
api/app/: main.py  worker.py
api/app/core/: auth.py  config.py  database.py  moderation.py  monitoring.py  rate_limit.py  security.py  storage.py
api/app/models/: __init__.py  interaction.py  listing.py  match.py  message.py  payment.py  profile.py  report.py  user.py
api/app/routers/: admin.py  auth.py  interactions.py  listings.py  matches.py  media.py  messages.py  payments.py  profiles.py  reports.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_media.py
api/versions/: 2025_10_26_1227-c1ce8e9a1684_initial_users_and_profiles_tables.py  2025_10_26_1421-71fc4119963f_add_listings_table.py  2025_10_26_1916-0064df150597_add_interactions_table.py  2025_10_27_0909-1386440cea26_add_matches_table.py  2025_10_27_0910-68d3ecfb63b5_add_messages_table.py  2025_10_27_1536-72420f61e59a_add_reports_table.py  2025_10_27_1615-2e63e3bee402_add_payments_table.py
(+29 files in other folders)
